fix text color and spacing on all browsers

--- a/sass/px-login.scss
+++ b/sass/px-login.scss
@@ -41,24 +41,24 @@ $inuit-enable-btn--bare : true;
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  align-items: center;
-  color: var(--px-login-text-color, black);
+  line-height: 2rem;
 }
 
 .login-button--user-icon {
-  min-width: $inuit-base-spacing-unit--huge;
-  height: $inuit-base-spacing-unit--huge;
-  margin-right: calculateRem(2px);
+  --iron-icon-width: 2rem;
+  --iron-icon-height: 2rem;
+  margin-right: 0.3333rem;
 }
 
 .login-button--chevron-icon {
-  width: calculateRem(12px);
-  min-width: calculateRem(12px);
-  margin-left: $inuit-base-spacing-unit--tiny;
+  --iron-icon-width: 1rem;
+  --iron-icon-height: 1rem;
+  margin-left: 0.3333rem;
+  margin-top: 0.4rem;
 }
 
 .login-menu--item {
-  height: $inuit-base-spacing-unit--huge;
+  height: 2rem;
 }
 
 // Trumps
